--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
+	var gameInstance = UnityLoader.instantiate("gameContainer", "Build/testReact.json");
+	gameInstance.SendMessage("Falling Object", "Bounce");
+    </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
