Added barebones blocking demo

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-	var gameInstance = UnityLoader.instantiate("gameContainer", "Build/testReact.json");
-	gameInstance.SendMessage("Falling Object", "Bounce");
+	var gameInstance = UnityLoader.instantiate("gameContainer", "Build/blocking_demo.json");
     </script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
